# marc-med-tracker

./: APPLE_HEALTH_SENSORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIAGNOSTIC_TEMPLATE.txt  INSTALL.md  LICENSE  MISSING_SENSORS_FIX.md  Makefile  OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_PROJECT.md  __init__.py  binary_sensor.py  blood_glucose_averages.yaml  dashboard_cards_apple_health.yaml  hacs.json  info.md  manifest.json  pyproject.toml  requirements.txt  sensor.py  services.yaml  setup.py
docs/: BINARY_SENSORS_WORKAROUND.md  BLOOD_GLUCOSE_CANADA_mmolL.md  COMPATIBILITY.md  DASHBOARD_INSTALLATION.md  DASHBOARD_INSTALLATION_FIXED.md  DASHBOARD_METHODS.md  DASHBOARD_SETUP.md  DASHBOARD_SETUP_COMPLETE.md  DASHBOARD_SIMPLE_INSTALL.md  DETAILS_PANEL_GUIDE.md  DEVELOPMENT.md  DOSE_TRACKING_GUIDE.md  HACS_DEPLOYMENT.md  HACS_QUICK_START.md  INSTALL.md  MEDICATION_SCHEDULE.md  NOTIFICATION_REFERENCE.md  NOTIFICATION_SETUP.md  QUICK_START_BUTTONS.md  TROUBLESHOOTING.md  UPDATE_DOCTOR_GUIDE.md  UPDATE_STOCK_GUIDE.md  UPGRADE_NOTES.md
examples/: automations.yaml.example  automations_dose_tracking.yaml  automations_with_notifications.yaml  blood_glucose_3_readings_options.yaml  blood_glucose_averages.yaml  complete_dashboard.yaml  configuration.yaml.example  dashboard_beautiful.yaml  dashboard_beautiful_simple.yaml  dashboard_cards_apple_health.yaml  dashboard_simple.yaml  dashboard_with_buttons.yaml  distance_tracking.yaml  lovelace.yaml.example  manual_binary_sensors.yaml  marc_med_tracker_theme.yaml  medication_details_panel.yaml  medication_details_simple.yaml  shortcut_button.yaml
scripts/: validate_hacs.py  validate_manifest.py  validate_services.py
tests/: __init__.py  test_calculations.py
