[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marc-med-tracker"
version = "2.0.0"
description = "Home Assistant integration for comprehensive medication tracking"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["homeassistant", "medication", "tracking", "health"]
authors = [
  {name = "Marc Med Tracker Contributors"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Home Automation",
]
dependencies = [
  "homeassistant>=2024.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/marc-med-tracker"
Documentation = "https://github.com/yourusername/marc-med-tracker/tree/main/docs"
Repository = "https://github.com/yourusername/marc-med-tracker"
Issues = "https://github.com/yourusername/marc-med-tracker/issues"
Changelog = "https://github.com/yourusername/marc-med-tracker/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
]
ignore = [
  "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
